--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.10.0",
     "mongoose": "^7.0.3",
+    "node": "^19.8.1",
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.0.0 <17.0.0"
   }
-  
 }
